--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@logto/nuxt": "^0.1.11",
     "@nuxt/fonts": "^0.7.0",
+    "@nuxtjs/kinde": "^0.1.10",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
