partially finished api to create and get user profile and also added check in the profile page to redirect when there's no profile

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/tailwindcss": "^6.12.0",
     "drizzle-orm": "^0.30.10",
     "nuxt": "^3.11.2",
+    "uuid": "^9.0.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
